# falsifiable_nb

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: build_and_test.yaml
falsifiable_nb/: __init__.py  cli.py  generate.py  html_exporter.py  http_server.py  mistune_rendering.py  remove_cells.py
falsifiable_nb/mistune_plugins/: inline_pandoc_footnotes.py
falsifiable_nb/plugins/mistune/: inline_footnotes.py
falsifiable_nb/plugins/preprocessing/: __init__.py
falsifiable_nb/templates/: falsifiable.html.j2
falsifiable_nb/templates/static/: base.css
tests/: test_generate.py  test_http_server.py
tests/fixtures/: 001_basic.ipynb  20200909-dunbars-number-is-quadratic.ipynb  Untitled.ipynb
