[tool.poetry]
name = "falsifiable_nb"
version = "0.0.1"
description = "nbconvert for falsifiable"
authors = ["Johnny Nelson <jbn@abreka.com>"]
license = "3-Clause BSD"

[tool.poetry.dependencies]
python = "^3.9"
nbconvert = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.4.7"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
